--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <p id="daparagraph">This is a pretty cool website! Look at this image:</p>
   <img id="welven" src="Images/welven.jpg">
   <table id="cooltable">
+   <caption>Welven's info</caption>
    <tr>
     <th>Name</th>
     <th>Age</th>
