Fixed image, table and CSS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Maathusan Sathiendran">
   <title>Basic HTML</title>
   <style>
-   #myHeader {
+   #myheader {
     color: lime;
     text-align: center;
     font-family: 'Zen Dots', cursive;
@@ -18,7 +18,6 @@
    #welven {
     width: 50%;
     height: 50%;
-    alt: Welven Da Great;
    }
    #cooltable {
     color: white;
@@ -33,9 +32,9 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
  </head>
  <body style="background-color:red;">
-  <h1 id="myHeader">Cool website</h1>
+  <h1 id="myheader">Cool website</h1>
   <p id="daparagraph">This is a pretty cool website! Look at this image:</p>
-  <img id="welven" src="Images/welven.jpg">
+  <img id="welven" src="Images/welven.jpg" alt="Welven Da Great";>
   <table id="cooltable">
    <caption>Welven's info</caption>
    <tr>
@@ -47,6 +46,7 @@
     <td>Welven</td>
     <td>25</td>
     <td>Deezville</td>
+   </tr>
   </table>
   <script src="script.js"></script>
  </body>
