--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  <body style="background-color:red;">
   <h1 id="myheader">Cool website</h1>
   <p id="daparagraph">This is a pretty cool website! Look at this image:</p>
-  <img id="welven" src="Images/welven.jpg" alt="Welven Da Great";>
+  <img id="welven" src="Images/welven.jpg" alt="Welven Da Great">
   <table id="cooltable">
    <caption>Welven's info</caption>
    <tr>
